--- a/views/login.ejs
+++ b/views/login.ejs
@@ -22,13 +22,13 @@
 
             <form id="login-form" action="/login" method="POST">
                 <div>
-                    <input type="text" id="username" name="Username" placeholder="Username" required>
+                    <input type="text" id="username" name="username" placeholder="Username" required>
                 </div>
                 <div>
                     <input type="password" id="password" name="password" placeholder="Password" required/>
                 </div>
                 <div>
-                    <input type="submit" value="Login"/>
+                    <button type="submit">Login</button>
                 </div>
                 <a href="/register">Register here</a>
             </form>
