--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -11,6 +11,38 @@
 
         <h1>Hello, <%= user.charAt(0).toUpperCase() + user.slice(1) %>!</h1>
 
+        <h1>WebSocket Test</h1>
+        <div id="messages"></div>
+        <input type="text" id="messageInput" placeholder="Type a message">
+        <button id="sendMessage">Send</button>
+
+        <script>
+            console.log("Hello from Nikki typing");
+            const socket = io();
+            sendBtn = document.getElementById('sendMessage');
+
+            socket.on('message', (msg) => {
+            const messagesDiv = document.getElementById('messages');
+            const newMessage = document.createElement('p');
+            newMessage.textContent = msg;
+            messagesDiv.appendChild(newMessage);
+            });
+
+            sendBtn.addEventListener('click', () => {
+                let messageInput = document.getElementById('messageInput').value;
+                socket.emit('chatMessage', messageInput);
+                messageInput = '';
+            });
+
+            // Listen for chat messages from the server
+            socket.on('chatMessage', (message) => {
+                const messagesDiv = document.getElementById('messages');
+                const newMessage = document.createElement('p');
+                newMessage.textContent = message;
+                messagesDiv.appendChild(newMessage);
+            });
+        </script>
+
     </body>
 
 </html>
