--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -17,10 +17,10 @@
         <button id="sendMessage">Send</button>
 
         <script>
-            console.log("Hello from Nikki typing");
             const socket = io();
             sendBtn = document.getElementById('sendMessage');
 
+            // listen for messages from server
             socket.on('message', (msg) => {
             const messagesDiv = document.getElementById('messages');
             const newMessage = document.createElement('p');
@@ -28,13 +28,14 @@
             messagesDiv.appendChild(newMessage);
             });
 
+            // emit chat messages sent by clients
             sendBtn.addEventListener('click', () => {
                 let messageInput = document.getElementById('messageInput').value;
                 socket.emit('chatMessage', messageInput);
                 messageInput = '';
             });
 
-            // Listen for chat messages from the server
+            // listen for chat messages (from server)
             socket.on('chatMessage', (message) => {
                 const messagesDiv = document.getElementById('messages');
                 const newMessage = document.createElement('p');
