Move views to ejs

--- a/views/lobby.ejs
+++ b/views/lobby.ejs
@@ -1,12 +1,60 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Lobby</title>
-    </head>
+  <head>
+    <title>UNO - CS375 / Lobby</title>
+    <style>
+      #content {
+        margin-top: 8rem;
+        text-align: center;
+      }
 
-    <body>
-        <h1>Lobby</h1>
-    </body>
+      #room-code {
+        color: red;
+      }
 
+      #start-button {
+        background-color: lightgreen;
+      }
+
+      #start-button:hover {
+        cursor: pointer;
+      }
+
+      #player-list li {
+        display: inline-block;
+        width: 180px;
+        margin: 0 12px 30px;
+      }
+
+      #player-list li > img {
+        border: 1px solid black;
+        text-decoration: none;
+        display: block;
+        height: 130px;
+        background-color: aqua;
+      }
+
+      #player-list li > h3 {
+        max-width: 140px;
+      }
+    </style>
+  </head>
+  <body>
+    <div id="content">
+      <h1>Lobby</h1>
+      <h2>Room Code: <span id="room-code"><%= roomCode %></span></h2>
+      <% if (user.isHost) { %>
+        <button id="start-button">Start Game</button>
+      <% } %>
+      <h2>Players:</h2>
+      <ul id="player-list">
+        <% users.forEach(function(user){ %>
+          <li>
+            <img src="/img/person-outline.svg" alt="<%= user.name %> picture">
+            <h3><%= user.name %></h3>
+          </li>
+        <% }); %>
+      </ul>
+    </div>
+  </body>
 </html>
-
